[package]
name = "tlsec"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }

bytes = "1.11.1"

ring = "0.17.14"

webpki = "0.22.4"
pem = "3.0.6"

flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
brotli = "8.0.2"

nix = { version = "0.31.3", features = ["net", "uio"] }